--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ pandas==2.2.3
 scikit_learn==1.6.0
 seaborn==0.13.2
 SQLAlchemy==2.0.34
+streamlit==1.41.1
 ydata_profiling==0.0.dev0
 yellowbrick==1.5
