--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ scikit_learn==1.6.0
 seaborn==0.13.2
 SQLAlchemy==2.0.34
 streamlit==1.41.1
-ydata_profiling
+# ydata_profiling #uncomment this line to install ydata_profiling
 yellowbrick==1.5
